setup initial pages and layout

--- a/starter-files/gatsby/.vscode/settings.json
+++ b/starter-files/gatsby/.vscode/settings.json
@@ -23,4 +23,10 @@
     "javascript",
     "javascriptreact"
   ],
+  "emmet.includeLanguages": {
+    "javascript": "javascriptreact"
+  },
+  "emmet.excludeLanguages": [
+    "markdown"
+  ]
 }
